# ros2_testing_demo_pkg

./: CMakeLists.txt  Readme.md  package.xml
.github/workflows/: industrial_ci.yml
scripts/: simple_py_pub_node.py
src/: simple_pub_node.cpp
test/: integrationtest_gtest.cpp  integrationtest_gtest.test.py  integrationtest_unittest.py  integrationtest_unittest.test.py  unittest_gtest.cpp
